# test_comp_runner

./: .gitignore  .gitmodules  README.md  dune  runner.ml  wait4.c  wait4.ml
src/: dune  report.ml  runner.ml  stdout  wait4.ml  whitelist.txt
